--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Portifolio</title>
+</head>
+<body>
+    <header class="container text-center">
+        <img src="..." alt="avatar" class="rounded" width="150">
+        <p class="lead">Eu sou a may</p>
+        <h1>E eu sou estudante de programação, logo sou uma garota de programa</h1>
+        <p>eu sou nerdola, e esquisita</p>
+        <p>gosto de tocar teclado e desenhar</p>
+    <div>
+        <p class="badge bg-secondary">HTML</p>
+        <p class="badge bg-secondary">CSS</p>
+        <p class="badge bg-secondary">JavaScript</p>
+    </div>
+    </header>
+</body>
+</html>
