--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
         <p class="badge bg-secondary">JavaScript</p>
     </div>
     </header>
+    <main class="container">
+        <h2>Meus projetos</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="..." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Minha biblioteca</h5>
+                        <p class="card-test">Descrição do projuto</p>
+                        <button type="button" class="btn btn-link">Botão</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
