--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header class="container text-center">
         <img src="..." alt="avatar" class="rounded" width="150">
-        <p class="lead">Eu sou a may</p>
+        <p class="lead">Eu mayara</p>
         <h1>E eu sou estudante de programação, logo sou uma garota de programa</h1>
         <p>eu sou nerdola, e esquisita</p>
         <p>gosto de tocar teclado e desenhar</p>
@@ -21,6 +21,40 @@
     <main class="container">
         <h2>Meus projetos</h2>
         <div class="row">
+            <!-- Projeto 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="..." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Minha biblioteca</h5>
+                        <p class="card-test">Descrição do projuto</p>
+                        <button type="button" class="btn btn-link">Botão</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="..." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Minha biblioteca</h5>
+                        <p class="card-test">Descrição do projuto</p>
+                        <button type="button" class="btn btn-link">Botão</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="..." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Minha biblioteca</h5>
+                        <p class="card-test">Descrição do projuto</p>
+                        <button type="button" class="btn btn-link">Botão</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 4 -->
             <div class="col-md-4">
                 <div class="card">
                     <img src="..." class="card-img-top">
