--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="card">
                     <img src="..." class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Minha biblioteca</h5>
-                        <p class="card-test">Descrição do projuto</p>
+                        <h5 class="card-title">Meu site da escola</h5>
+                        <p class="card-test">Nesse projeto realizamos a construção de um site representando a nossa turma escola</p>
                         <button type="button" class="btn btn-link">Botão</button>
                     </div>
                 </div>
