--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
                     </div>
                 </div>
             </div>
+            <!-- Projeto 4 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="..." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Projeto barbearia Alura</h5>
+                        <p class="card-test">Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
+                        <button type="button" class="btn btn-link">Botão</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="container py-5">
