--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="container text-center">
-        <img src="..." alt="avatar" class="rounded" width="150">
+        <img src="avatar.jpg" alt="avatar" class="rounded" width="150">
         <p class="lead">Eu mayara</p>
         <h1>E eu sou estudante de programação, logo sou uma garota de programa</h1>
         <p>eu sou nerdola, e esquisita</p>
