--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p class="lead">Eu mayara</p>
         <h1>E eu sou estudante de programação, logo sou uma garota de programa</h1>
         <p>eu sou nerdola, e esquisita</p>
-        <p>gosto de tocar teclado e desenhar</p>
+        <p>omaguaaaaaa</p>
     <div>
         <p class="badge bg-secondary">HTML</p>
         <p class="badge bg-secondary">CSS</p>
