--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Meu site da escola</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de um site representando a nossa turma escola</p>
-                        <button type="button" class="btn btn-link">Botão</button>
+                       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Veja o projeto
+</button>
                     </div>
                 </div>
             </div>
@@ -41,7 +43,9 @@
                     <div class="card-body">
                         <h5 class="card-title">projeto Alura Flix</h5>
                         <p class="card-test">Nesse projetos realizamos a construção de uma platoforma de conteúdo.</p>
-                        <button type="button" class="btn btn-link">Botão</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="moda2" data-bs-target="#exampleModal">
+  Veja o projeto
+</button>
                     </div>
                 </div>
             </div>
@@ -52,7 +56,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto jogo super mario</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de um site no estilo super mario</p>
-                        <button type="button" class="btn btn-link">Botão</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="moda3" data-bs-target="#exampleModal">
+  Veja o projeto
+</button>
                     </div>
                 </div>
             </div>
@@ -74,7 +80,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto barbearia Alura</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
-                        <button type="button" class="btn btn-link">Botão</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="moda4" data-bs-target="#exampleModal">
+  Veja o projeto
+</button>
                     </div>
                 </div>
             </div>
