--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Meu site da escola</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de um site representando a nossa turma escola</p>
-                       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Veja o projeto
-</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">
+                            Abrir
+                        </button>
                     </div>
                 </div>
             </div>
@@ -43,9 +43,9 @@
                     <div class="card-body">
                         <h5 class="card-title">projeto Alura Flix</h5>
                         <p class="card-test">Nesse projetos realizamos a construção de uma platoforma de conteúdo.</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="moda2" data-bs-target="#exampleModal">
-  Veja o projeto
-</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
+                            Abrir
+                        </button>
                     </div>
                 </div>
             </div>
@@ -56,9 +56,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto jogo super mario</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de um site no estilo super mario</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="moda3" data-bs-target="#exampleModal">
-  Veja o projeto
-</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">
+                            Abrir
+                        </button>
                     </div>
                 </div>
             </div>
@@ -69,9 +69,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto fleshcard</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de uma ferramenta interativa de estudos</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="moda4" data-bs-target="#exampleModal">
-  Veja o projeto
-</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4">
+                            Abrir
+                        </button>
                     </div>
                 </div>
             </div>
@@ -82,28 +82,28 @@
                     <div class="card-body">
                         <h5 class="card-title">Projeto barbearia Alura</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="moda4" data-bs-target="#exampleModal">
-  Veja o projeto
-</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal5">
+                            Abrir
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <!-- Modal 1 -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modal1" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Meu site da escola</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <p>Esse potifolio foi criado para expor nossos projetos que foram desenvolvidos ao longo do  ano</p>
+        <img src="" alt="Projeto  1">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <a href="coloca aqui o link do site">Ver projeto</a>
       </div>
     </div>
   </div>
