--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="card">
                     <img src="..." class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Projeto fleshcard</h5>
+                        <h5 class="card-title">Projeto flashcard</h5>
                         <p class="card-test">Nesse projeto realizamos a construção de uma ferramenta interativa de estudos</p>
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4">
                             Abrir
@@ -90,24 +90,98 @@
             </div>
         </div>
     </main>
+
     <!-- Modal 1 -->
-<div class="modal fade" id="modal1" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Meu site da escola</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Esse potifolio foi criado para expor nossos projetos que foram desenvolvidos ao longo do  ano</p>
-        <img src="" alt="Projeto  1">
-      </div>
-      <div class="modal-footer">
-        <a href="coloca aqui o link do site">Ver projeto</a>
-      </div>
+    <div class="modal fade" id="modal1" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Meu site da escola</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Nesse projeto realizamos a construção de um site representando a nossa turma escola<</p>
+                    <img src="" alt="Projeto 1">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://clonacartaoatualizado2024.github.io/site-escola/">Ver projeto</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
+    <!-- Modal 2 -->
+    <div class="modal fade" id="modal2" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Projeto Aluraflix</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Nesse projetos realizamos a construção de uma platoforma de conteúdo.</p>
+                    <img src="" alt="Projeto 2">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://segundo-trimestre-curso-1.vercel.app/">Ver projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal 3 -->
+    <div class="modal fade" id="modal3" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Projeto Super Mario</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Nesse projeto realizamos a construção de um site no estilo super mario</p>
+                    <img src="" alt="Projeto 3">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://clonacartaoatualizado2024.github.io/jogo-super-mario/">Ver projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal 4 -->
+    <div class="modal fade" id="modal4" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Projeto Flashcard</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Nesse projeto realizamos a construção de uma ferramenta interativa de estudos</p>
+                    <img src="" alt="Projeto 4">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://clonacartaoatualizado2024.github.io/flashcard/">Ver projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal 5 -->
+    <div class="modal fade" id="modal5" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Projeto BarbeariaAlura</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
+                    <img src="" alt="Projeto 5">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://clonacartaoatualizado2024.github.io/CartaoBlack/">Ver projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="container py-5">
         <h2>Entre em contato</h2>
         <div>
