--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="..." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Meu site da escola</h5>
-                        <p class="card-test">Nesse projeto realizamos a construção de um site representando a nossa turma escola</p>
+                        <p class="card-text">Nesse projeto realizamos a construção de um site representando a nossa turma escola</p>
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal1">
                             Abrir
                         </button>
@@ -42,7 +42,7 @@
                     <img src="..." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">projeto Alura Flix</h5>
-                        <p class="card-test">Nesse projetos realizamos a construção de uma platoforma de conteúdo.</p>
+                        <p class="card-text">Nesse projetos realizamos a construção de uma platoforma de conteúdo.</p>
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal2">
                             Abrir
                         </button>
@@ -55,7 +55,7 @@
                     <img src="..." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Projeto jogo super mario</h5>
-                        <p class="card-test">Nesse projeto realizamos a construção de um site no estilo super mario</p>
+                        <p class="card-text">Nesse projeto realizamos a construção de um site no estilo super mario</p>
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal3">
                             Abrir
                         </button>
@@ -68,7 +68,7 @@
                     <img src="..." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Projeto flashcard</h5>
-                        <p class="card-test">Nesse projeto realizamos a construção de uma ferramenta interativa de estudos</p>
+                        <p class="card-text">Nesse projeto realizamos a construção de uma ferramenta interativa de estudos</p>
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal4">
                             Abrir
                         </button>
@@ -81,7 +81,7 @@
                     <img src="..." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Projeto barbearia Alura</h5>
-                        <p class="card-test">Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
+                        <p class="card-text">Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal5">
                             Abrir
                         </button>
