--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header class="container text-center">
+        <div>
+            <button id="dark-mode-toggle" class="dark-mode-btn">Modo escuro</button>
+        </div>
         <img src="avatar.jpg" alt="avatar" class="rounded" width="150">
         <p class="lead">Eu mayara</p>
         <h1>E eu sou estudante de programação, logo sou uma garota de programa</h1>
