--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Nesse projeto realizamos a construção de um site representando a nossa turma escola<</p>
-                    <img src="" alt="Projeto 1">
+                    <img src="" class="img-fluid w-100" alt="Projeto 1">
                 </div>
                 <div class="modal-footer">
                     <a href="https://clonacartaoatualizado2024.github.io/site-escola/">Ver projeto</a>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Nesse projetos realizamos a construção de uma platoforma de conteúdo.</p>
-                    <img src="" alt="Projeto 2">
+                    <img src="" class="img-fluid w-100" alt="Projeto 2">
                 </div>
                 <div class="modal-footer">
                     <a href="https://segundo-trimestre-curso-1.vercel.app/">Ver projeto</a>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Nesse projeto realizamos a construção de um site no estilo super mario</p>
-                    <img src="" alt="Projeto 3">
+                    <img src="" class="img-fluid w-100" alt="Projeto 3">
                 </div>
                 <div class="modal-footer">
                     <a href="https://clonacartaoatualizado2024.github.io/jogo-super-mario/">Ver projeto</a>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Nesse projeto realizamos a construção de uma ferramenta interativa de estudos</p>
-                    <img src="" alt="Projeto 4">
+                    <img src="" class="img-fluid w-100" alt="Projeto 4">
                 </div>
                 <div class="modal-footer">
                     <a href="https://clonacartaoatualizado2024.github.io/flashcard/">Ver projeto</a>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="modal-body">
                     <p>Nesse projeto realizamos a construção de um site comercial para uma barbearia</p>
-                    <img src="" alt="Projeto 5">
+                    <img src="" class="img-fluid w-100" alt="Projeto 5">
                 </div>
                 <div class="modal-footer">
                     <a href="https://clonacartaoatualizado2024.github.io/CartaoBlack/">Ver projeto</a>
